<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <!-- Logo de la Marca -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logooptiframes"
            android:contentDescription="@string/logo_optiframes"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal" />

        <!-- Línea divisora -->
        <View
            android:layout_width="388dp"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black" />

        <!-- Botón de Regresar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|center_vertical">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@drawable/botonretroceder"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="fitCenter"
                android:contentDescription="@string/back_button_description" />

            <TextView
                android:id="@+id/text_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Regresar"
                android:textColor="#A8A8A8"
                android:textSize="20sp"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- Imagen del Producto -->
        <ImageView
            android:id="@+id/productImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/product_image_description"
            android:scaleType="centerInside"
            android:background="@drawable/rounded_container" />

        <!-- Título del Producto -->
        <TextView
            android:id="@+id/productTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lente de sol"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:layout_gravity="start" />

        <!-- Nombre del Producto -->
        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Arnette - Modelo B10EC"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:layout_gravity="start" />

        <!-- Precio del Producto -->
        <TextView
            android:id="@+id/productPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S/1,200.00"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:layout_gravity="start" />

        <!-- Descripción del Producto -->
        <TextView
            android:id="@+id/productDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="136dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="Los lentes de sol protegen tus ojos de los rayos UV, reducen el deslumbramiento y mejoran la visión en condiciones de luz brillante."
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Botón para Agregar al Carrito -->
        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Agregar al carrito"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>
